# iba-flash-card-gen

./: .gitignore  LICENSE  README.md  justfile  main.py  pyproject.toml
iba-fetch/: __main__.py  iba.py  main.py  models.py
iba-flash-card-gen/: __main__.py  iba.py  models.py  output.py
